   1) if perl is available
   2) whether the perl libraries for XLS support are available
   3) whether the perl libraries for XLSX support are available

  If perl is not available, an appropriate warning message is displayed.

  If necessary perl libraries are not available, a warning message is
  displayed, as is a message suggesting the user run the (new)
  installXLSXModules() function to attempt to install the necessary
  perl libraries.


CHANGES IN 2.7.3 (2010-04-02)
-----------------------------

Enhancements:

- New xlsFormats() command to determine which Excel formats are
  supported (XLS, XLSX).

Bug Fixes:

- No longer attempt to install perl modules Compress::Raw::Zlib and
  Spreadsheet::XLSX at build/compile time.  This should resolve recent
  build issues, particularly on Windows.

- All perl code can now operate (but generate warnings) when perl modules Compress::Raw::Zlib and
  Spreadsheet::XLSX when are not installed. 

- Also update Greg's email address.

CHANGES IN 2.7.1 (2010-02-19)
-----------------------------

Enhancements:

- on Windows attempts to locate ActiveState perl if perl= not specified and 
  Rtools perl would have otherwise been used in read.xls and other perl 
  dependent functions.

CHANGES IN 2.7.0 (2010-01-25)
-----------------------------

Bug Fixes:

- Fix building of Perl libraries on Win32


CHANGES IN 2.7.0 (2010-01-25)
-----------------------------

Enhancements:

- read.xls() now supports Excel 2007 'xlsx' files.

- read.xls() now allows specification of worksheet by name

- read.xls() now supports ftp URLs.

- Improved ll() so user can limit output to specified classes



New Functions:

- sheetCount() and sheetNames() to determine the number and names of 
  worksheets in an Excel file, respectively.

Bug Fixes:

- Fix formatting warning in frameApply().

- Resolve crash of "ll(.GlobalEnv)"

-

CHANGES IN 2.6.1 (2009-07-15)
-----------------------------

Bug Fixes
